# phaseus-audio-plugins

./: .gitignore  CMakeLists.txt  DESIGN.md  GUIDE.md  PROJECT_MEMORY.md  README.md  build_and_copy  createplugin
.github/workflows/: release.yml
Plugins/: CMakeLists.txt
Plugins/PHASEUS_Delay/: CMakeLists.txt  DAYI_DELAY_SUMMARY.md  PROJECT_MEMORY.md
Plugins/PHASEUS_Delay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Shared/PhaseusUI/: PhaseusPresetBar.cpp  PhaseusPresetBar.h
Templates/DefaultPluginTemplate/: CMakeLists.txt
Templates/DefaultPluginTemplate/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
manuals/: DAYI_DELAY_MANUAL.md
